install: Update image digests for v1.15.1
Based on https://github.com/cilium/cilium/actions/runs/7908398984. I had
to copy these digests manually because image-digest-output.txt-v1.15.1
was empty.

## Docker Manifests

### cilium

`docker.io/cilium/cilium:v1.15.1@sha256:351d6685dc6f6ffbcd5451043167cfa8842c6decf80d8c8e426a417c73fb56d4`
`docker.io/cilium/cilium:stable@sha256:351d6685dc6f6ffbcd5451043167cfa8842c6decf80d8c8e426a417c73fb56d4`
`quay.io/cilium/cilium:v1.15.1@sha256:351d6685dc6f6ffbcd5451043167cfa8842c6decf80d8c8e426a417c73fb56d4`
`quay.io/cilium/cilium:stable@sha256:351d6685dc6f6ffbcd5451043167cfa8842c6decf80d8c8e426a417c73fb56d4`

### clustermesh-apiserver

`docker.io/cilium/clustermesh-apiserver:v1.15.1@sha256:b353badd255c2ce47eaa8f394ee4cbf70666773d7294bd887693e0c33503dc37`
`docker.io/cilium/clustermesh-apiserver:stable@sha256:b353badd255c2ce47eaa8f394ee4cbf70666773d7294bd887693e0c33503dc37`
`quay.io/cilium/clustermesh-apiserver:v1.15.1@sha256:b353badd255c2ce47eaa8f394ee4cbf70666773d7294bd887693e0c33503dc37`
`quay.io/cilium/clustermesh-apiserver:stable@sha256:b353badd255c2ce47eaa8f394ee4cbf70666773d7294bd887693e0c33503dc37`

### docker-plugin

`docker.io/cilium/docker-plugin:v1.15.1@sha256:19fabca499d44afff0bd56584f2019e6a23534e43b6882e1aa0980b54a2562ee`
`docker.io/cilium/docker-plugin:stable@sha256:19fabca499d44afff0bd56584f2019e6a23534e43b6882e1aa0980b54a2562ee`
`quay.io/cilium/docker-plugin:v1.15.1@sha256:19fabca499d44afff0bd56584f2019e6a23534e43b6882e1aa0980b54a2562ee`
`quay.io/cilium/docker-plugin:stable@sha256:19fabca499d44afff0bd56584f2019e6a23534e43b6882e1aa0980b54a2562ee`

### hubble-relay

`docker.io/cilium/hubble-relay:v1.15.1@sha256:3254aaf85064bc1567e8ce01ad634b6dd269e91858c83be99e47e685d4bb8012`
`docker.io/cilium/hubble-relay:stable@sha256:3254aaf85064bc1567e8ce01ad634b6dd269e91858c83be99e47e685d4bb8012`
`quay.io/cilium/hubble-relay:v1.15.1@sha256:3254aaf85064bc1567e8ce01ad634b6dd269e91858c83be99e47e685d4bb8012`
`quay.io/cilium/hubble-rela

--- a/install/kubernetes/Makefile.digests
+++ b/install/kubernetes/Makefile.digests
@@ -2,12 +2,12 @@
 # Copyright 2024 Authors of Cilium
 # SPDX-License-Identifier: Apache-2.0
 
-export CILIUM_DIGEST := ""
-export CLUSTERMESH_APISERVER_DIGEST := ""
-export DOCKER_PLUGIN_DIGEST := ""
-export HUBBLE_RELAY_DIGEST := ""
-export OPERATOR_ALIBABACLOUD_DIGEST := ""
-export OPERATOR_AWS_DIGEST := ""
-export OPERATOR_AZURE_DIGEST := ""
-export OPERATOR_GENERIC_DIGEST := ""
-export OPERATOR_DIGEST := ""
+export CILIUM_DIGEST := "sha256:351d6685dc6f6ffbcd5451043167cfa8842c6decf80d8c8e426a417c73fb56d4"
+export CLUSTERMESH_APISERVER_DIGEST := "sha256:b353badd255c2ce47eaa8f394ee4cbf70666773d7294bd887693e0c33503dc37"
+export DOCKER_PLUGIN_DIGEST := "sha256:19fabca499d44afff0bd56584f2019e6a23534e43b6882e1aa0980b54a2562ee"
+export HUBBLE_RELAY_DIGEST := "sha256:3254aaf85064bc1567e8ce01ad634b6dd269e91858c83be99e47e685d4bb8012"
+export OPERATOR_ALIBABACLOUD_DIGEST := "sha256:9745df85036c9b0deb89065c2bf35df350cfc89284cb0555072c675d2875d5d7"
+export OPERATOR_AWS_DIGEST := "sha256:9481ada434ac7c271906d672162c2d70ff87287b229ebb18b86e8af7f757307c"
+export OPERATOR_AZURE_DIGEST := "sha256:7131758a0a6eb2103c52197eec67769ab339833adbd71f5ede0edafb78e0b587"
+export OPERATOR_GENERIC_DIGEST := "sha256:819c7281f5a4f25ee1ce2ec4c76b6fbc69a660c68b7825e9580b1813833fa743"
+export OPERATOR_DIGEST := "sha256:f1c1aa5d655464691247ee073c9733c25574f05c9759865ad5b2485c48035bf3"
