--- a/.github/actions/azure/k8s-versions.yaml
+++ b/.github/actions/azure/k8s-versions.yaml
@@ -4,6 +4,7 @@ include:
   - version: "1.25"
     location: westus3
     index: 1
+    disabled: true
   - version: "1.26"
     location: westus2
     index: 2
