ci: Update tested K8S versions across all cloud providers
[ upstream commit 14d68f20830dd286be2c9710c0a10fb823ad019d ]

This commit revises the Kubernetes versions tested for compatibility across all supported cloud providers.
Additionally, it adjusts the default Kubernetes version to match the default version provided by each cloud provider

Signed-off-by: Birol Bilgin <birol@cilium.io>
Signed-off-by: Tobias Klauser <tklauser@distanz.ch>

--- a/.github/actions/aws/k8s-versions.yaml
+++ b/.github/actions/aws/k8s-versions.yaml
@@ -4,9 +4,9 @@ include:
   - version: "1.23"
     region: ca-west-1
   - version: "1.24"
-    region: us-west-1
+    region: ca-west-1
   - version: "1.25"
-    region: us-east-2
+    region: us-west-2
   - version: "1.26"
-    region: ca-central-1
+    region: us-west-1
     default: true
