--- a/.github/actions/gke/k8s-versions.yaml
+++ b/.github/actions/gke/k8s-versions.yaml
@@ -5,9 +5,9 @@ k8s:
     zone: us-west2-a
     vmIndex: 1
   - version: "1.25"
-    zone: us-west3-a
+    zone: us-west1-b
     vmIndex: 2
   - version: "1.26"
-    zone: us-east4-b
+    zone: us-west2-c
     vmIndex: 3
     default: true
