workflows: replace references to bpf-next with current LTS
We currently don't update bpf-next kernels, since we don't want
to cause additional regressions. This is a problem since lvh updates
may break existing images.

Instead of relying on bpf-next, use the current LTS kernel in
workflows.

Signed-off-by: Lorenz Bauer <lmb@isovalent.com>

--- a/.github/workflows/tests-ipsec-upgrade.yaml
+++ b/.github/workflows/tests-ipsec-upgrade.yaml
@@ -75,7 +75,7 @@ jobs:
       fail-fast: false
       max-parallel: 16
       matrix:
-        config: ['5.4', '5.10', '6.1', 'bpf-next']
+        config: ['5.4', '5.10', '6.1', '6.6']
         mode: ['minor', 'patch']
         include:
           # Define three config sets
@@ -109,9 +109,9 @@ jobs:
             # https://github.com/cilium/cilium/issues/29805#issuecomment-1855600171
             ipv6: 'false'
 
-          - config: 'bpf-next'
-            # We don't want to update bpf-next after branching
-            kernel: 'bpf-next-20230420.212204'
+          - config: '6.6'
+            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+            kernel: '6.6-20240215.093821'
             kube-proxy: 'iptables'
             kpr: 'disabled'
             tunnel: 'vxlan'
@@ -132,7 +132,7 @@ jobs:
             mode: 'minor'
             name: '3'
 
-          - config: 'bpf-next'
+          - config: '6.6'
             mode: 'minor'
             name: '4'
 
@@ -148,7 +148,7 @@ jobs:
             mode: 'patch'
             name: '7'
 
-          - config: 'bpf-next'
+          - config: '6.6'
             mode: 'patch'
             name: '8'
 
