--- a/.github/workflows/conformance-ipsec-e2e.yaml
+++ b/.github/workflows/conformance-ipsec-e2e.yaml
@@ -77,7 +77,8 @@ jobs:
           # See https://github.com/cilium/cilium/issues/20606 for configuration table
 
           - name: '1'
-            kernel: '4.19-20230420.212204'
+            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+            kernel: '4.19-20240215.093821'
             kube-proxy: 'iptables'
             kpr: 'disabled'
             tunnel: 'vxlan'
@@ -86,7 +87,8 @@ jobs:
             ipv6: 'false' # https://github.com/cilium/cilium/issues/23461
 
           - name: '2'
-            kernel: '5.4-20230420.212204'
+            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+            kernel: '5.4-20240215.093821'
             kube-proxy: 'iptables'
             kpr: 'disabled'
             tunnel: 'disabled'
@@ -94,7 +96,8 @@ jobs:
             encryption-node: 'false'
 
           - name: '3'
-            kernel: '5.10-20230420.212204'
+            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+            kernel: '5.10-20240215.093821'
             kube-proxy: 'iptables'
             kpr: 'disabled'
             tunnel: 'disabled'
@@ -103,7 +106,8 @@ jobs:
             endpoint-routes: 'true'
 
           - name: '4'
-            kernel: 'bpf-next-20230420.212204'
+            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+            kernel: '6.6-20240215.093821'
             kube-proxy: 'iptables'
             kpr: 'disabled'
             tunnel: 'geneve'
