workflows: replace references to bpf-next with current LTS
We currently don't update bpf-next kernels, since we don't want
to cause additional regressions. This is a problem since lvh updates
may break existing images.

Instead of relying on bpf-next, use the current LTS kernel in
workflows.

Signed-off-by: Lorenz Bauer <lmb@isovalent.com>

--- a/.github/workflows/conformance-e2e.yaml
+++ b/.github/workflows/conformance-e2e.yaml
@@ -132,8 +132,8 @@ jobs:
             lb-acceleration: 'testing-only'
 
           - name: '7'
-            # We don't want to update bpf-next after branching
-            kernel: 'bpf-next-20230420.212204'
+            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+            kernel: '6.6-20240215.093821'
             kube-proxy: 'none'
             kpr: 'strict'
             tunnel: 'disabled'
@@ -142,8 +142,8 @@ jobs:
             lb-acceleration: 'testing-only'
 
           - name: '8'
-            # We don't want to update bpf-next after branching
-            kernel: 'bpf-next-20230420.212204'
+            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+            kernel: '6.6-20240215.093821'
             kube-proxy: 'iptables'
             kpr: 'disabled'
             tunnel: 'geneve'
@@ -185,7 +185,8 @@ jobs:
             egress-gateway: 'true'
 
           - name: '12'
-            kernel: 'bpf-next-20230420.212204'
+            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+            kernel: '6.6-20240215.093821'
             kube-proxy: 'none'
             kpr: 'strict'
             tunnel: 'disabled'
