gh: template: query whether the bug is a regression
Let's make it easier for users to tell us about regressions.

Signed-off-by: Julian Wiedmann <jwi@isovalent.com>

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -50,6 +50,11 @@ body:
     validations:
       required: true
   - type: textarea
+    id: regression
+    attributes:
+      label: Regression
+      description: Is the reported bug a regression? If so, what is the last version of Cilium where it still worked fine?
+  - type: textarea
     id: sysdump
     attributes:
       label: Sysdump
