--- a/.github/actions/ginkgo/main-k8s-versions.yaml
+++ b/.github/actions/ginkgo/main-k8s-versions.yaml
@@ -13,14 +13,14 @@ include:
     # renovate: datasource=docker
     kube-image: "kindest/node:v1.28.6@sha256:e9e59d321795595d0eed0de48ef9fbda50388dc8bd4a9b23fb9bd869f370ec7e"
     # renovate: datasource=docker depName=quay.io/lvh-images/kind
-    kernel: "4.19-20240215.093821@sha256:b5c40794f24509c786868b84cb17b7aeed78b9e2a171ca7774d06506576c6039"
+    kernel: "rhel8-20240215.093821@sha256:a55057ce80472f0e702924974626e49eb6dc3fff1a54dbb4a397105d76ff1045"
 
   - k8s-version: "1.27"
     ip-family: "dual"
     # renovate: datasource=docker
     kube-image: "kindest/node:v1.27.10@sha256:e6b2f72f22a4de7b957cd5541e519a8bef3bae7261dd30c6df34cd9bdd3f8476"
     # renovate: datasource=docker depName=quay.io/lvh-images/kind
-    kernel: "4.19-20240215.093821@sha256:b5c40794f24509c786868b84cb17b7aeed78b9e2a171ca7774d06506576c6039"
+    kernel: "rhel8-20240215.093821@sha256:a55057ce80472f0e702924974626e49eb6dc3fff1a54dbb4a397105d76ff1045"
 
   - k8s-version: "1.26"
     ip-family: "dual"
