--- a/bpf/Makefile.bpf
+++ b/bpf/Makefile.bpf
@@ -14,7 +14,7 @@ CLANG_FLAGS += -Wdeclaration-after-statement
 CLANG_FLAGS += -Wimplicit-int-conversion -Wenum-conversion
 CLANG_FLAGS += -Wimplicit-fallthrough
 # Mimics the mcpu values set by cilium-agent. See GetBPFCPU().
-ifeq (,$(filter $(KERNEL),419 54))
+ifneq ($(KERNEL),54)
 CLANG_FLAGS += -mcpu=v3
 else
 CLANG_FLAGS += -mcpu=v2
