envoy: Run as non-root user in deamonset mode
Relates: https://github.com/cilium/proxy/pull/568
Relates: #23217
Signed-off-by: Tam Mach <tam.mach@cilium.io>

--- a/images/cilium/Dockerfile
+++ b/images/cilium/Dockerfile
@@ -3,7 +3,7 @@
 
 ARG CILIUM_BUILDER_IMAGE=quay.io/cilium/cilium-builder:c10fbd1c46cc87cd7816b4d585e91e889f8ad84b@sha256:952c13f49a43e472540c3845b4ba796fba4d7f234806c07a556b04a36535a4e3
 ARG CILIUM_RUNTIME_IMAGE=quay.io/cilium/cilium-runtime:272c2080c5c3fc32c2a6ca6b5727daeb12836164@sha256:408484a9f3aaafc41f875254d52af1354822c2d0a694799e90372e0765b27d99
-ARG CILIUM_ENVOY_IMAGE=quay.io/cilium/cilium-envoy:v1.28.1-e62af1059e691fe025d97b53b56ed4e8afa366dc@sha256:663a71073bfebde735bdde2d7afeb565ef7e5c37de1bf962afbb432f1062559f
+ARG CILIUM_ENVOY_IMAGE=quay.io/cilium/cilium-envoy-dev:5628f440b9cfcee2fb0b2372e27116d37048af24@sha256:63da89537b600f1c0288e47938dcbfa4603ea488324fc26d14e713a2ca7ad4bb
 
 # cilium-envoy from github.com/cilium/proxy
 #
