--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -1783,10 +1783,10 @@ envoy:
   # -- Envoy container image.
   image:
     override: ~
-    repository: "quay.io/cilium/cilium-envoy"
-    tag: "v1.28.1-e62af1059e691fe025d97b53b56ed4e8afa366dc"
+    repository: "quay.io/cilium/cilium-envoy-dev"
+    tag: "5628f440b9cfcee2fb0b2372e27116d37048af24"
     pullPolicy: "Always"
-    digest: "sha256:663a71073bfebde735bdde2d7afeb565ef7e5c37de1bf962afbb432f1062559f"
+    digest: "sha256:63da89537b600f1c0288e47938dcbfa4603ea488324fc26d14e713a2ca7ad4bb"
     useDigest: true
   # -- Additional containers added to the cilium Envoy DaemonSet.
   extraContainers: []
@@ -1822,7 +1822,8 @@ envoy:
   # -- Annotations to be added to all top-level cilium-envoy objects (resources under templates/cilium-envoy)
   annotations: {}
   # -- Security Context for cilium-envoy pods.
-  podSecurityContext: {}
+  podSecurityContext:
+    fsGroup: 1337
   # -- Annotations to be added to envoy pods
   podAnnotations: {}
   # -- Labels to be added to envoy pods
@@ -1858,6 +1859,12 @@ envoy:
     # runAsUser: 0
     # -- Run the pod with elevated privileges
     privileged: false
+    # -- Run as non-root user if privileged is false
+    runAsNonRoot: true
+    # -- User to run the pod with if privileged is false
+    runAsUser: 1337
+    # -- Group to run the pod with if privileged is false
+    runAsGroup: 1337
     # -- SELinux options for the `cilium-envoy` container
     seLinuxOptions:
       level: 's0'
