ci: replace v4.19 with RHEL8 kernels
Kernel v4.19 is the oldest kernel we currently test on. With the
upcoming minimum kernel version bump to v5.4 this configuration
becomes obsolete. Instead of removing it, test against the RHEL8
kernel. This gives us coverage of the two "minimum" versions we
need to support: v5.4 and whatever RHEL 8.6 ships.

Signed-off-by: Lorenz Bauer <lmb@isovalent.com>

--- a/.github/workflows/conformance-e2e.yaml
+++ b/.github/workflows/conformance-e2e.yaml
@@ -80,7 +80,7 @@ jobs:
 
           - name: '1'
             # renovate: datasource=docker depName=quay.io/lvh-images/kind
-            kernel: '4.19-20240215.093821'
+            kernel: 'rhel8-20240221.094422'
             kube-proxy: 'iptables'
             kpr: 'false'
             tunnel: 'vxlan'
@@ -217,7 +217,7 @@ jobs:
 
           - name: '13'
             # renovate: datasource=docker depName=quay.io/lvh-images/kind
-            kernel: '4.19-20240215.093821'
+            kernel: 'rhel8-20240221.094422'
             kube-proxy: 'iptables'
             kpr: 'false'
             tunnel: 'vxlan'
