--- a/.github/workflows/conformance-k8s-kind.yaml
+++ b/.github/workflows/conformance-k8s-kind.yaml
@@ -77,7 +77,7 @@ jobs:
           cat <<EOF | /usr/local/bin/kind create cluster \
             --name ${{ env.cluster_name}}           \
             --image ${{ env.KIND_K8S_IMAGE }}  \
-            -v7 --wait 1m --retain --config=-
+            -v7 --retain --config=-
           kind: Cluster
           apiVersion: kind.x-k8s.io/v1alpha4
           networking:
