--- a/.github/workflows/conformance-k8s-network-policies.yaml
+++ b/.github/workflows/conformance-k8s-network-policies.yaml
@@ -11,7 +11,7 @@ on:
 permissions: read-all
 
 env:
-  cilium_cli_ci_version:
+  cilium_cli_ci_version: 93125c39bdc637b9b646fb7aa45dbdc8e530999b
   # renovate: datasource=github-releases depName=kubernetes-sigs/kind
   KIND_VERSION: v0.22.0
   KIND_CONFIG: .github/kind-config.yaml
