--- a/.github/workflows/tests-ipsec-upgrade.yaml
+++ b/.github/workflows/tests-ipsec-upgrade.yaml
@@ -51,7 +51,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  cilium_cli_ci_version:
+  cilium_cli_ci_version: 93125c39bdc637b9b646fb7aa45dbdc8e530999b
   # renovate: datasource=docker depName=kindest/node
   k8s_version: v1.29.2
 
